# INF584Project

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  TODO.md  compileShaders.sh  main.cpp
dep/: CMakeLists.txt
dep/stbImage/: CMakeLists.txt
dep/tinyObjectLoader/: CMakeLists.txt
shaders/: basicTriangle.frag  basicTriangle.vert  globalFrame.frag  globalFrame.vert  passThroughNormal.vert
src/: CMakeLists.txt  application.cpp  application.hpp  applicationTest.hpp  buffer.cpp  buffer.hpp  camera.hpp  descriptors.cpp  descriptors.hpp  entity.hpp  errorHandler.hpp  frameInfo.hpp  gameComponent.cpp  gameCoordinator.hpp  gameObject.cpp  gameObject.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderSystem.cpp  renderSystem.hpp  renderer.cpp  renderer.hpp  swapChain.cpp  swapChain.hpp  types.hpp  utils.hpp  vulkanApp.cpp  vulkanApp.hpp  vulkanInstance.cpp  vulkanInstance.hpp  window.hpp
src/currentApp/: CMakeLists.txt  application.cpp  applicationTest.hpp
src/currentApp/inputs/: CMakeLists.txt  keyboardInput.cpp  keyboardInput.hpp  mouseInput.cpp  mouseInput.hpp
src/currentApp/renderSubSystems/: CMakeLists.txt  brdfRenderSubSystem.cpp  brdfRenderSubSystem.hpp  data.hpp  frameRenderSubSystem.cpp  frameRenderSubSystem.hpp  normalRenderSubSystem.cpp  normalRenderSubSystem.hpp  raytracingRenderSubSystem.cpp  raytracingRenderSubSystem.hpp  renderSubSystems.hpp  simpleRenderSubSystem.cpp  simpleRenderSubSystem.hpp
src/engine/: CMakeLists.txt  application.cpp  application.hpp  buffer.cpp  buffer.hpp  camera.hpp  descriptors.cpp  descriptors.hpp  engine.hpp  errorHandler.hpp  model.cpp  model.hpp  pipeline.hpp  renderer.hpp  swapChain.hpp  types.hpp  vulkanApp.cpp  vulkanApp.hpp  vulkanInstance.cpp  window.hpp
src/engine/core/: CMakeLists.txt  core.hpp
src/engine/core/entityComponentSystem/: CMakeLists.txt  entityComponentSystem.hpp  gameComponent.hpp  gameCoordinator.cpp  gameCoordinator.hpp  gameObject.hpp  gameSystem.cpp  gameSystem.hpp
src/engine/core/entityComponentSystem/components/: CMakeLists.txt  componentModel.hpp  componentRenderSubSystem.hpp  componentTransform.hpp  components.hpp
src/engine/core/entityComponentSystem/systems/: CMakeLists.txt  ecsSimpleRenderSystem.cpp  ecstest.cpp  ecstest.hpp  systems.hpp
src/engine/core/gameplay/: CMakeLists.txt  camera.hpp  frameInfo.hpp  gameplay.hpp  model.cpp  model.hpp  window.hpp
src/engine/core/renderSubSystems/: CMakeLists.txt  globalFrameRenderSubSystem.cpp  globalFrameRenderSubSystem.hpp  renderSubSystem.hpp  renderSubSystems.hpp  simpleRenderSubSystem.cpp  simpleRenderSubSystem.hpp
src/engine/core/utils/: CMakeLists.txt  buffer.cpp  buffer.hpp  errorHandler.cpp  errorHandler.hpp  utilityFunctions.hpp  utils.hpp
src/engine/core/vulkan/: CMakeLists.txt  coreVulkan.hpp  descriptors.cpp  descriptors.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swapChain.cpp  swapChain.hpp  vulkanApp.cpp  vulkanApp.hpp  vulkanInstance.hpp
src/engine/dep/: CMakeLists.txt
src/engine/dep/stbImage/: CMakeLists.txt
src/engine/dep/tinyObjectLoader/: CMakeLists.txt
src/engine/entityComponentSystem/: CMakeLists.txt  gameComponent.cpp  gameObject.cpp
src/engine/entityComponentSystem/components/: CMakeLists.txt
src/engine/entityComponentSystem/systems/: CMakeLists.txt  ecsSimpleRenderSystem.hpp
src/engine/inputs/: keyboardInput.cpp  keyboardInput.hpp  mouseInput.cpp  mouseInput.hpp
src/engine/renderSubSystems/: CMakeLists.txt  globalFrameRenderSubSystem.hpp  renderSubSystem.hpp  simpleRenderSubSystem.hpp
src/entityComponentSystem/: CMakeLists.txt  gameComponent.hpp  gameCoordinator.cpp  gameSystem.cpp  gameSystem.hpp
src/entityComponentSystem/components/: CMakeLists.txt  componentModel.hpp  componentRenderSubSystem.hpp  componentTransform.hpp  components.hpp
src/entityComponentSystem/systems/: CMakeLists.txt  ecsSimpleRenderSystem.cpp  ecsSimpleRenderSystem.hpp  ecstest.cpp  ecstest.hpp
src/inputs/: CMakeLists.txt  keyboardInput.hpp  mouseInput.cpp  mouseInput.hpp
src/renderSubSystems/: CMakeLists.txt  globalFrameRenderSubSystem.cpp  globalFrameRenderSubSystem.hpp  renderSubSystem.hpp  simpleRenderSubSystem.cpp  simpleRenderSubSystem.hpp
